# StudyPP

./: .gitignore  README.md
1lab/ex1/: main.cpp
1lab/ex1/src/: ArchiveCreator.cpp  ArchiveCreator.h  CMakeLists.txt
1lab/ex2/: CMakeLists.txt  main.cpp
1lab/ex2/src/: CMakeLists.txt  Extractor.cpp  Extractor.h
1lab/exAmdal/: amdal.md
lab2/ex1/: CMakeLists.txt  main.cpp
lab2/ex1/src/: CMakeLists.txt
lab2/ex1/src/Controller/: GameLifeController.cpp  GameLifeController.h
lab2/ex1/src/Model/: GameLife.cpp  GameLife.h
lab2/ex1/src/View/: GameLifeView.cpp  GameLifeView.h
lab2/ex2/: CMakeLists.txt  main.cpp
lab2/ex2/src/Controller/: GaussianBlurController.cpp  GaussianBlurController.h
lab2/ex2/src/Model/: GaussianBlur.cpp  GaussianBlur.h
lab2/ex2/src/View/: GaussianBlurView.cpp  GaussianBlurView.h
lab2/ex2/src/View/ImageSelector/: ImageSelector.cpp  ImageSelector.h
lab2/ex2/src/View/Slider/: Slider.cpp  Slider.h
lab2/examen/: CMakeLists.txt  main.cpp
lab3/bank/: CMakeLists.txt  main.cpp
lab3/bank/src/: Simulation.h
lab3/bank/src/Bank/: Bank.cpp  Bank.h
lab3/bank/src/Players/: BartLisa.h  BaseCitizen.h  Burns.h  Homer.h  ICitizen.h  Marge.h  players.h  utils.h
lab3/bank/tests/: BankTests.cpp  CMakeLists.txt
lab3/bank2/: CMakeLists.txt  main.cpp
lab3/bank2/src/: Simulation.h
lab3/bank2/src/Bank/: Bank.cpp  Bank.h
lab3/bank2/src/Players/: Apu.h  BartLisa.h  Nelson.h  Smithers.h  Snake.h  players.h  utils.h
lab3/warehouse/: CMakeLists.txt  main.cpp
lab3/warehouse/src/: Threads.h  Warehouse.h
lab4/player/: CMakeLists.txt  main.cpp
lab4/player/src/: AudioPlayer.h  Melody.h  Note.h
lab5/Radio/: CMakeLists.txt  main.cpp
lab5/Radio/src/: RadioClient.h  RadioServer.h
lab5/TV/: CMakeLists.txt  Client.h  Constants.h  PacketHeader.h  Server.h  main.cpp
lab6/AtomicMax/: CMakeLists.txt  main.cpp
lab6/AtomicMax/src/: AtomicMax.h
lab6/AtomicMax/test/: AtomicMaxTests.cpp  CMakeLists.txt
lab6/StopTokenSource/: CMakeLists.txt  main.cpp
lab6/StopTokenSource/src/: StopControl.cpp  StopControl.h
lab6/StopTokenSource/test/: CMakeLists.txt  StopTokenSourceTests.cpp
lab6/ThreadPool/: CMakeLists.txt  main.cpp
lab6/ThreadPool/cmake/: AddCatch2.cmake
lab6/ThreadPool/src/: LockFreeQueue.h  ThreadPool.cpp  ThreadPool.h
lab6/ThreadPool/test/: CMakeLists.txt  PerformanceTests.cpp  ThreadPoolTests.cpp
lab6/TicketOffice/: CMakeLists.txt  main.cpp
lab6/TicketOffice/src/: TicketOffice.cpp  TicketOffice.h
lab6/TicketOffice/test/: CMakeLists.txt  TicketOfficeTests.cpp
lab7/1_task/: CMakeLists.txt  main.cpp
lab7/2_gen/: CMakeLists.txt  main.cpp
lab7/3_await/: CMakeLists.txt  main.cpp
lab7/file/: CMakeLists.txt  main.cpp
lab7/file/src/: async_file.hpp  dispatcher.cpp  dispatcher.hpp  io_awaiter_base.hpp  task.hpp
lab7/fooly/: CMakeLists.txt  main.cpp
lab8/: README.md
lab8/1ex/: CMakeLists.txt  main.cpp
lab8/1ex/src/: BitonicSorter.cpp  BitonicSorter.h  GpuHelper.cpp  GpuHelper.h
lab8/gaus/: CMakeLists.txt  image_filters.cl  main.cpp
lab8/gaus/Application/: Application.cpp  Application.h
lab8/gaus/BlurProcessor/: GaussianBlurProcessor.cpp  GaussianBlurProcessor.h  ImageProcessor.h  MotionBlurProcessor.cpp  MotionBlurProcessor.h
lab8/gaus/OpenCL/: OpenCLManager.cpp  OpenCLManager.h
